EA2018: Populating course content.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -36,9 +36,6 @@
     </div>
   </div>
 
-  <!-- .main will be a vertical scroller (vh: 100, mh: 600px) -->
-  <!-- Maybe collapse onclick for mobile -->
-  <!-- There will need to be a DIV to the right. -->
   <!-- Main will begin centered. -->
        <!-- Mobile: Collapse. Desktop: Pull left; Open DIV on right (somehow; smooth) -->
        <!-- Responsive: Menu will expand/collapse; DIV on right will fold underneath Main. -->
@@ -70,9 +67,8 @@
       <div class="content">
         <div class="cc-courseDateLast">2018 June</div>
         <div class="cc-courseDateStarted">2018 May</div>
-        <div class="cc-courseDesc">
-          Fake Static Hard-Coded Data (WIP; Sorry! ETA: 2018-06-18 Mon (The course listing is correct, however)): [lorem15&rarr;] Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam fuga reprehenderit voluptates sunt assumenda eius.
-        </div>
+        <div class="cc-courseProgress">1</div>
+        <div class="cc-courseDesc">Fake Static Hard-Coded Data (replaced with JavaScript) [lorem15&rarr;]</div>
         <div class="cc-courseList">
           <div>Class 1</div>
           <div>Class 2</div>
@@ -93,6 +89,6 @@
     </svg>
   </div>
 
-  <script src="training.js" async></script>
+  <script src="training.js"></script>
 </body>
 </html>
