PWA - EA2018: Added active card. Added collapse. Fixed expand button scroll.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -56,7 +56,7 @@
         <div class="ch-courseDesc" hidden></div>
         <div class="ch-courseList" hidden>
           <div class="course course-template" hidden>
-            <div class="expand-it">+</div>
+            <div class="expand-it">*</div>
             <div class="c-listheader">
               <span class="c-listitem cl-courseClassProgress"></span><span> - </span><span class="c-listitem cl-courseClassTitle"></span>
             </div>
