PWA - EA2018: Added 'Last Updated' in footer.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -82,8 +82,10 @@
     </div>
   </div>
 
-  <footer hidden>
-    <h2>(Responsive!)</h2>
+  <footer>
+    <div class="msg">
+      Last Updated: <b><a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">2018 June 15 @ 4:14 AM</a></b>
+    </div>
   </footer>
 
   <div class="loader">
