PWA - EA2018: Completed IndexedDB integration.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -83,8 +83,9 @@
   </div>
 
   <footer>
+    <div class="message"></div>
     <div class="msg">
-      Last Updated: <b><a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">2018 June 17 @ 1:11 AM</a></b>
+      Last Updated: <b><a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">2018 June 18 @ 12:30 PM</a></b>
     </div>
   </footer>
 
