PWA - EA2018: Moved top-level content into 'about app' button fly-up in footer.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -19,13 +19,7 @@
         <div id="hdrLogo">
           <h1 tabindex="0" onclick="goToExternalUrl()" alt="Showcase for Keith D Commiskey" title="Showcase for Keith D Commiskey">Keith D Commiskey</h1>
           <h2 class="sub"><span class="no-wrap">Educational Advancement 2018</span></h2>
-          <div class="h3">
-            I developed this <span class="no-wrap">'Training Progress SPA'</span> as a JavaScript-based PWA (as a part of my PWA learning).
-          </div>
-          <div class="h3">
-            My code (for this page) is <a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">open source on GitHub</a>.<br/>
-            I did R&D on the <a class="no-wrap" target="kdcNewWindow" href="https://codepen.io/KeithDC/pen/XYMgQj">smooth CSS Flex wrapping in CodePen</a>.
-          </div>
+          <h3>(Training Progress SPA)</h3>
           <div>
             [&nbsp;<a onclick="goToExternalUrl(this.href);" href="https://kdcinfo.com">Portfolio</a>&nbsp;]&nbsp;
             [&nbsp;<a onclick="goToExternalUrl(this.href);" href="https://kdcbase.com">Showcase</a>&nbsp;]&nbsp;
@@ -85,7 +79,25 @@
   <footer>
     <div class="message"></div>
     <div class="msg">
-      Last Updated: <b><a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">2018 June 18 @ 12:46 PM</a></b>
+      Last Updated: <b><a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">2018 June 18 @ 12:58 PM</a></b>
+    </div>
+    <div id="webapp-help">
+      <button type="button" id="button-toggle-webapp-help">About this App</button>
+      <div id="app-message">
+        <ul class="footer-menu-ul">
+          <li class="input-options-with-items" style="display: inline-block;">
+            <div class="h3">
+              I developed this <span class="no-wrap">'Training Progress SPA'</span> as a JavaScript-based PWA (as a part of my PWA learning).
+            </div>
+          </li>
+          <li class="input-options-with-items" style="display: inline-block;">
+            <div class="h3">
+              My code (for this page) is <a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">open source on GitHub</a>.<br/>
+              I did R&D on the <a target="kdcNewWindow" href="https://codepen.io/KeithDC/pen/XYMgQj"><span class="no-wrap">smooth CSS Flex wrapping</span> <span class="no-wrap">in CodePen</span></a>.
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 
