PWA: EA2018: Fixed 'list expand' button: disappears on hover after scroll.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -55,10 +55,12 @@
         <div class="ch-courseList" hidden>
           <div class="course course-template" hidden>
             <div class="expand-it">*</div>
-            <div class="c-listheader">
-              <span class="c-listitem cl-courseClassProgress"></span><span> - </span><span class="c-listitem cl-courseClassTitle"></span>
+            <div class="c-expandable">
+              <div class="c-listheader">
+                <span class="c-listitem cl-courseClassProgress"></span><span> - </span><span class="c-listitem cl-courseClassTitle"></span>
+              </div>
+              <div class="c-listitem cl-courseClassContent"></div>
             </div>
-            <div class="c-listitem cl-courseClassContent"></div>
           </div>
         </div>
       </div>
@@ -79,7 +81,7 @@
   <footer>
     <div class="message"></div>
     <div class="msg">
-      Last Updated: <b><a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">2018 June 18 @ 12:58 PM</a></b>
+      Last Updated: <b><a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">2018 June 18 @ 6:27 PM</a></b>
     </div>
     <div id="webapp-help">
       <button type="button" id="button-toggle-webapp-help">About this App</button>
