PWA: EA2018: Added item in 'About' dialog (sharing is caring).

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -88,16 +88,18 @@
       <button type="button" id="button-toggle-webapp-help">About this App</button>
       <div id="app-message">
         <ul class="footer-menu-ul">
-          <li class="input-options-with-items" style="display: inline-block;">
-            <div class="h3">
-              I developed this <span class="no-wrap">'Training Progress SPA'</span> as a JavaScript-based PWA (as a part of my PWA learning).
-            </div>
+          <li class="h3 input-options-with-items">
+            <b>Q:</b> Why is it free? <b>A:</b> I'm a web/app developer by trait: Doing these projects fills two purposes;
+            I get more programming experience <small>(something I never tire of gaining)</small>,
+            and I get a utility that can be crossed off my life's <code>@TODO:</code> list <small>(where it's likely been for years)</small>.
+            <br/><br/>Additionally... <em>Sharing is a building block for making lives better.</em>
           </li>
-          <li class="input-options-with-items" style="display: inline-block;">
-            <div class="h3">
-              My code (for this page) is <a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">open source on GitHub</a>.<br/>
-              I did R&D on the <a target="kdcNewWindow" href="https://codepen.io/KeithDC/pen/XYMgQj"><span class="no-wrap">smooth CSS Flex wrapping</span> <span class="no-wrap">in CodePen</span></a>.
-            </div>
+          <li class="h3 input-options-with-items">
+            I developed this <span class="no-wrap">'Training Progress SPA'</span> as a JavaScript-based PWA (as a part of my PWA learning).
+          </li>
+          <li class="h3 input-options-with-items">
+            My code (for this page) is <a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">open source on GitHub</a>.<br/>
+            I did R&D on the <a target="kdcNewWindow" href="https://codepen.io/KeithDC/pen/XYMgQj"><span class="no-wrap">smooth CSS Flex wrapping</span> <span class="no-wrap">in CodePen</span></a>.
           </li>
         </ul>
       </div>
