--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -67,7 +67,7 @@
       </div>
     </main>
     <div class="content-wrapper">
-      <div class="close-it">Close Details</div>
+      <div class="close-it" tabindex="0">Close Details</div>
       <div class="content">
         <div><label>Last Visited:</label> <span class="cc-courseDateLast">2018 June</span></div>
         <div><label>Began:</label> <span class="cc-courseDateStarted">2018 May</span></div>
