PWA: EA2018: Began versioning assets.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Educational Advancement Profile page: Keith D Commiskey</title>
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Palanquin+Dark|Permanent+Marker" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="training.css">
+  <link rel="stylesheet" type="text/css" href="training.css?v20180713a">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
@@ -111,7 +111,7 @@
     </svg>
   </div>
 
-  <script src="training.js"></script>
+  <script src="training.js?v20180713a"></script>
   <script type="text/javascript">
     function goToExternalUrl(url) {
       let goToUrl = (typeof url === 'undefined') ? 'https://kdcinfo.com' : url;
