PWA: Training: Updated 'About'. Minor copy adjustments. Some general cleanup.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="canonical" href="https://kdcinfo.com/app/training/index.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Educational Advancement Profile page: Keith D Commiskey</title>
+  <title>Training Progress SPA: Keith D Commiskey</title>
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Palanquin+Dark|Permanent+Marker" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="training.css?v20180713a">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
@@ -17,9 +17,8 @@
     <header class="header">
       <div id="header" class="desc">
         <div id="hdrLogo">
-          <h1 tabindex="0" onclick="goToExternalUrl()" alt="Showcase for Keith D Commiskey" title="Showcase for Keith D Commiskey">Keith D Commiskey</h1>
-          <h2 class="sub"><span class="no-wrap">Educational Advancement 2018</span></h2>
-          <h3>&mdash; Training Progress SPA &mdash;</h3>
+          <h1 tabindex="0" onclick="goToExternalUrl()" alt="Showcase for Keith D Commiskey" title="Showcase for Keith D Commiskey">&mdash; Training Progress SPA &mdash;</h1>
+          <h2 class="no-wrap">Keith D Commiskey</h2>
           <div>
             [&nbsp;<a onclick="goToExternalUrl(this.href);" href="https://kdcinfo.com">Portfolio</a>&nbsp;]&nbsp;
             [&nbsp;<a onclick="goToExternalUrl(this.href);" href="https://kdcbase.com">Showcase</a>&nbsp;]&nbsp;
@@ -30,7 +29,7 @@
     </header>
     <div class="header-below">
       <div>
-        <strong>Educational Advancement</strong> is a listing of courses I've been engaged with since May 2018.
+        This <strong>Training Progress SPA</strong> is a listing of courses I've been engaged with since May 2018.
         Previous educational advancements can be found in the <a href="https://kdcinfo.com/resume.php?education" class="no-wrap">educational section of my resume</a>.
       </div>
     </div>
@@ -97,13 +96,21 @@
         <div id="app-message">
           <ul class="footer-menu-ul">
             <li class="h3 input-options-with-items">
-              <b>Q:</b> Why is it free? <b>A:</b> I'm a web/app developer by trait: Doing these projects fills two purposes;
-              I get more programming experience <small>(something I never tire of gaining)</small>,
-              and I get a utility that can be crossed off my life's <code>@TODO:</code> list <small>(where it's likely been for years)</small>.
-              <br/><br/>Additionally... <em>Sharing is a building block for making lives better.</em>
+              <b>Training Progress SPA</b>: In May 2018, I began investing time learning Progressive Web Apps (PWA).
+              In that neither selected training vendor provides a public profile page,
+              I decided to create a SPA showing my relevant and ongoing course studies.
             </li>
             <li class="h3 input-options-with-items">
-              I developed this <span class="no-wrap">'Training Progress SPA'</span> as a JavaScript-based PWA (as a part of my PWA learning).
+              <b>Q:</b> Why do I develop free apps?<br/>
+              <b>A:</b> I'm a web/app developer by trait:
+              Developing open source projects fills two purposes for me;
+              I get more programming experience (something I never tire of gaining),
+              and I can cross off an item on my life's <code>@TODO:</code> list <small>(where it's likely been for years)</small>.
+            </li>
+            <li class="h3 input-options-with-items">
+              The SPA's data store currently uses IndexedDB with a fallback to localStorage.
+              Once complete, it will support service workers as well.
+              In all cases, the overriding source of truth is an external JSON-based <code>.js</code> file.
             </li>
             <li class="h3 input-options-with-items">
               My code (for this page) is <a class="no-wrap" target="kdcNewWindow" href="https://github.com/KDCinfo/snippets/tree/master/pwa/training">open source on GitHub</a>.<br/>
