Training SPA: Aesthetic adjustments. Added OG tags for Slack posting.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -6,10 +6,16 @@
   <link rel="canonical" href="https://kdcinfo.com/app/training/index.html">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Training Progress SPA: Keith D Commiskey</title>
+  <meta name="description" content="I built this Training Progress SPA for courses I've been engaged with since May 2018.">
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Palanquin+Dark|Permanent+Marker" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="training.css?v20180713a">
+  <link rel="stylesheet" type="text/css" href="training.css?v20180714a">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <meta property="og:url" content="https://kdcinfo.com/app/training/">
+  <meta property="og:title" content="Training Progress SPA: Keith D Commiskey">
+  <meta property="og:description" content="I built this Training Progress SPA for courses I've been engaged with since May 2018.">
+  <meta property="og:site_name" content="Training Progress SPA">
+  <meta property="og:image" content="https://kdcinfo.com/db/kdcbase/splash_training_640.jpg">
 </head>
 <body>
 
@@ -128,7 +134,7 @@
     </svg>
   </div>
 
-  <script src="training.js?v20180713a"></script>
+  <script src="training.js?v20180714a"></script>
   <script type="text/javascript">
     function goToExternalUrl(url) {
       let goToUrl = (typeof url === 'undefined') ? 'https://kdcinfo.com' : url;
