--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -8,7 +8,7 @@
   <title>Training Progress SPA: Keith D Commiskey</title>
   <meta name="description" content="I built this Training Progress SPA for courses I've been engaged with since May 2018.">
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Palanquin+Dark|Permanent+Marker" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="training.css?v20180714a">
+  <link rel="stylesheet" type="text/css" href="training.css?v20180715a">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <meta property="og:url" content="https://kdcinfo.com/app/training/">
@@ -23,7 +23,7 @@
     <header class="header">
       <div id="header" class="desc">
         <div id="hdrLogo">
-          <h1 tabindex="0" onclick="goToExternalUrl()" alt="Showcase for Keith D Commiskey" title="Showcase for Keith D Commiskey">&mdash; Training Progress SPA &mdash;</h1>
+          <h1 tabindex="0" onclick="goToExternalUrl()" alt="Portfolio for Keith D Commiskey" title="Portfolio for Keith D Commiskey">&mdash; Training Progress SPA &mdash;</h1>
           <h2 class="no-wrap">Keith D Commiskey</h2>
           <div>
             [&nbsp;<a onclick="goToExternalUrl(this.href);" href="https://kdcinfo.com">Portfolio</a>&nbsp;]&nbsp;
@@ -53,7 +53,7 @@
           <button role="switch" aria-checked="true" id="completedCourses" class="switch">
             <span>show</span>
             <span>hide</span>
-          </button> Completed Courses <small>(<span id="completed-count">0</span>)</small>
+          </button> <span class="button-label">Completed Courses</span> <small>(<span id="completed-count">0</span>)</small>
         </label>
       </div>
     </div>
@@ -134,7 +134,7 @@
     </svg>
   </div>
 
-  <script src="training.js?v20180714a"></script>
+  <script src="training.js?v20180715a"></script>
   <script type="text/javascript">
     function goToExternalUrl(url) {
       let goToUrl = (typeof url === 'undefined') ? 'https://kdcinfo.com' : url;
