Training SPA: Now hiding 'Completed' courses on initial page load.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -50,7 +50,7 @@
       <div class="card-tip">Click a course for more detailed progress.</div>
       <div class="cards card-options">
         <label class="switch">
-          <button role="switch" aria-checked="true" id="completedCourses" class="switch">
+          <button role="switch" aria-checked="false" id="completedCourses" class="switch">
             <span>show</span>
             <span>hide</span>
           </button> <span class="button-label">Completed Courses</span> <small>(<span id="completed-count">0</span>)</small>
