Training SPA: Minor copy adjustments.

--- a/pwa/training/index.html
+++ b/pwa/training/index.html
@@ -8,7 +8,7 @@
   <title>Training Progress SPA: Keith D Commiskey</title>
   <meta name="description" content="I built this Training Progress SPA for courses I've been engaged with since May 2018.">
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Palanquin+Dark|Permanent+Marker" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="training.css?v20180715a">
+  <link rel="stylesheet" type="text/css" href="training.css?v20180715b">
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <meta property="og:url" content="https://kdcinfo.com/app/training/">
@@ -87,7 +87,7 @@
         <div><label>Last Visited:</label> <span class="cc-courseDateLast">2018 June</span></div>
         <div><label>Began:</label> <span class="cc-courseDateStarted">2018 May</span></div>
         <div><label>Overall Progress:</label> <span class="cc-courseProgress">1</span></div>
-        <label>Course Desciption:</label><br/>
+        <label>Course Description:</label><br/>
         <div class="cc-courseDesc">Fake Static Hard-Coded Data (replaced with JavaScript) [lorem15&rarr;]</div>
         <label>Course Topics:</label><br/>
       </div>
@@ -114,7 +114,7 @@
               and I can cross off an item on my life's <code>@TODO:</code> list <small>(where it's likely been for years)</small>.
             </li>
             <li class="h3 input-options-with-items">
-              The SPA's data store currently uses IndexedDB with a fallback to localStorage.
+              The SPA's data store uses IndexedDB with a fallback to localStorage.
               Once complete, it will support service workers as well.
               In all cases, the overriding source of truth is an external JSON-based <code>.js</code> file.
             </li>
@@ -134,7 +134,7 @@
     </svg>
   </div>
 
-  <script src="training.js?v20180715a"></script>
+  <script src="training.js?v20180715b"></script>
   <script type="text/javascript">
     function goToExternalUrl(url) {
       let goToUrl = (typeof url === 'undefined') ? 'https://kdcinfo.com' : url;
